--- a/sass/app.sass
+++ b/sass/app.sass
@@ -2,7 +2,7 @@
 @import "mixins"
 
 .deck
-    height: 200px
+    height: 300px
     width: 400px
     display: flex
     flex-wrap: wrap
@@ -11,21 +11,29 @@
     align-items: center
     
 
-.one
+    
+.color-1
     background-color: $blue
     
-.two
+.color-2
     background-color: $green    
     
-.three
+.color-3
     background-color: $yellow
     
-.four
+.color-4
     background-color: $pink
     
-.note
-    height: 45%
-    width: 22%
+.color-5
+    background-color: $purple 
+    
+.color-6
+    background-color: $orange    
+    
+.card
+    height: 24%
+    width: 24%
+
     
 .hidden
     background-color: $hidden-note
