--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,6 +1,8 @@
 $blue: #4286f4
 $green: #42f445
-$yellow: #f4f442
+$yellow: #fcfc28
 $pink: #f4427a
+$purple: #cb51f7
+$orange: #ff9d1e
 
 $hidden-note: #000000
