--- a/css/app.css
+++ b/css/app.css
@@ -4,8 +4,8 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-around;
-  align-items: center; }
+  justify-content: space-evenly;
+  align-items: space-evenly; }
 
 .color-1 {
   background-color: #4286f4; }
@@ -26,8 +26,8 @@
   background-color: #ff9d1e; }
 
 .card {
-  height: 24%;
-  width: 24%; }
+  height: 30%;
+  width: 22%; }
 
 .hidden {
   background-color: #000000; }
