--- a/sass/app.sass
+++ b/sass/app.sass
@@ -7,8 +7,8 @@
     display: flex
     flex-wrap: wrap
     flex-direction: row
-    justify-content: space-around
-    align-items: center
+    justify-content: space-evenly
+    align-items: space-evenly
     
 
     
@@ -31,9 +31,11 @@
     background-color: $orange    
     
 .card
-    height: 24%
-    width: 24%
+    height: 30%
+    width: 22%
 
+
+    
     
 .hidden
     background-color: $hidden-note
