--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -11,3 +11,7 @@ $hidden-note: #000000;
 $use-fadeIn: true;
 $use-fadeOut: true;
 $use-bounce: true;
+$use-flipInY: true;
+$use-bounce: true;
+$use-wiggle: true;
+$use-shake: true;
