--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,10 +8,10 @@ $orange: #ff9d1e;
 $hidden-note: #000000;
 
 
-$use-fadeIn: true;
-$use-fadeOut: true;
-$use-bounce: true;
+
+
 $use-flipInY: true;
 $use-bounce: true;
-$use-wiggle: true;
 $use-shake: true;
+$use-flipOutY: true;
+$use-tada: true;
