changed animation for flipping

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -13,5 +13,5 @@ $hidden-note: #000000;
 $use-flipInY: true;
 $use-bounce: true;
 $use-shake: true;
-$use-flipOutY: true;
+$use-flip: true;
 $use-tada: true;
