--- a/css/app.css
+++ b/css/app.css
@@ -329,6 +329,46 @@ body {
   -webkit-animation-name: bounceOutUp;
   animation-name: bounceOutUp; }
 
+@-webkit-keyframes flip {
+  0% {
+    -webkit-transform: perspective(400px) rotateY(0);
+    -webkit-animation-timing-function: ease-out; }
+  40% {
+    -webkit-transform: perspective(400px) translateZ(150px) rotateY(170deg);
+    -webkit-animation-timing-function: ease-out; }
+  50% {
+    -webkit-transform: perspective(400px) translateZ(150px) rotateY(190deg) scale(1);
+    -webkit-animation-timing-function: ease-in; }
+  80% {
+    -webkit-transform: perspective(400px) rotateY(360deg) scale(0.95);
+    -webkit-animation-timing-function: ease-in; }
+  100% {
+    -webkit-transform: perspective(400px) scale(1);
+    -webkit-animation-timing-function: ease-in; } }
+@keyframes flip {
+  0% {
+    transform: perspective(400px) rotateY(0);
+    animation-timing-function: ease-out; }
+  40% {
+    transform: perspective(400px) translateZ(150px) rotateY(170deg);
+    animation-timing-function: ease-out; }
+  50% {
+    transform: perspective(400px) translateZ(150px) rotateY(190deg) scale(1);
+    animation-timing-function: ease-in; }
+  80% {
+    transform: perspective(400px) rotateY(360deg) scale(0.95);
+    animation-timing-function: ease-in; }
+  100% {
+    transform: perspective(400px) scale(1);
+    animation-timing-function: ease-in; } }
+.flip {
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-backface-visibility: visible !important;
+  backface-visibility: visible !important;
+  -webkit-animation-name: flip;
+  animation-name: flip; }
+
 @-webkit-keyframes flipInY {
   0% {
     -webkit-transform: perspective(400px) rotateY(90deg);
@@ -357,26 +397,6 @@ body {
   -webkit-animation-name: flipInY;
   animation-name: flipInY; }
 
-@-webkit-keyframes flipOutY {
-  0% {
-    -webkit-transform: perspective(400px) rotateY(0deg);
-    opacity: 1; }
-  100% {
-    -webkit-transform: perspective(400px) rotateY(90deg);
-    opacity: 0; } }
-@keyframes flipOutY {
-  0% {
-    transform: perspective(400px) rotateY(0deg);
-    opacity: 1; }
-  100% {
-    transform: perspective(400px) rotateY(90deg);
-    opacity: 0; } }
-.flipOutY {
-  -webkit-backface-visibility: visible !important;
-  backface-visibility: visible !important;
-  -webkit-animation-name: flipOutY;
-  animation-name: flipOutY; }
-
 .deck {
   height: 300px;
   width: 400px;
@@ -384,7 +404,9 @@ body {
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center; }
+  align-items: center;
+  position: relative;
+  perspective: 800px; }
 
 .color-1 {
   background-color: #4286f4; }
@@ -406,10 +428,26 @@ body {
 
 .card {
   height: 30%;
-  width: 22%; }
+  width: 22%;
+  transform-style: preserve-3d;
+  transition: transform 0.6s; }
+
+figure {
+  margin: 0;
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden; }
 
 .faceDown {
-  background-color: #000000; }
+  background-color: black; }
+
+.back {
+  transform: rotateY(180deg); }
+
+.flipped {
+  transform: rotateY(180deg); }
 
 .disabled {
   pointer-events: none; }
