--- a/sass/app.scss
+++ b/sass/app.scss
@@ -10,12 +10,13 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    position: relative;
+    perspective: 800px;
 }
 
     
 .color-1{
     background-color: $blue;
-    
 }
     
 .color-2{
@@ -34,15 +35,32 @@
 .color-6{
     background-color: $orange; 
 }
+
 .card{
     height: 30%;
     width: 22%;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
 }
 
-    
-    
-.faceDown{
-    background-color: $hidden-note;
+figure {
+    margin: 0;
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.faceDown {
+    background-color: black;
+}
+.back {
+   transform: rotateY(180deg);
+}
+
+.flipped {
+    transform: rotateY(180deg);
 }
 
 .disabled {
