added turn counter

--- a/sass/animate-sass/helpers/_mixins.scss
+++ b/sass/animate-sass/helpers/_mixins.scss
@@ -38,3 +38,13 @@
         @content;
     }
 }
+
+
+// end
+
+
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+  border-radius: $radius;
+  background-clip: padding-box;
+}
