--- a/css/app.css
+++ b/css/app.css
@@ -438,7 +438,10 @@ figure {
   position: absolute;
   width: 100%;
   height: 100%;
-  backface-visibility: hidden; }
+  backface-visibility: hidden;
+  -webkit-border-radius: 20px;
+  border-radius: 20px;
+  background-clip: padding-box; }
 
 .faceDown {
   background-color: black; }
