--- a/sass/app.scss
+++ b/sass/app.scss
@@ -50,6 +50,7 @@ figure {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    @include border-radius(20px)
 }
 
 .faceDown {
