--- a/css/app.css
+++ b/css/app.css
@@ -432,6 +432,9 @@ body {
   background-repeat: no-repeat;
   background-size: cover; }
 
+.disabled {
+  color: red; }
+
 .card {
   height: 30%;
   width: 22%;
