--- a/css/app.css
+++ b/css/app.css
@@ -400,6 +400,9 @@ body {
 .deck {
   height: 300px;
   width: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -453,10 +456,18 @@ figure {
   background-color: black; }
 
 .spinBack {
-  transform: rotateY(180deg); }
+  -moz-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg); }
 
 .flipped {
-  transform: rotateY(180deg); }
+  -moz-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg); }
 
 .disabled {
   pointer-events: none; }
