--- a/sass/app.scss
+++ b/sass/app.scss
@@ -5,7 +5,7 @@
 .deck {
     height: 300px;
     width: 400px;
-    display: flex;
+    @include display(flex);
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-around;
@@ -18,7 +18,7 @@
 .color-1{
     background-color: $blue;
 }
-    
+ 
 .color-2{
     background-color: $green;   
 }
@@ -48,6 +48,7 @@
     width: 22%;
     transform-style: preserve-3d;
     transition: transform 0.6s;
+    
 }
 
 figure {
@@ -64,11 +65,11 @@ figure {
     background-color: black;
 }
 .spinBack {
-   transform: rotateY(180deg);
+   @include rotate(180deg);
 }
 
 .flipped {
-    transform: rotateY(180deg);
+     @include rotate(180deg);
 }
 
 .disabled {
