--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,6 +8,8 @@ $orange: #ff9d1e;
 
 $hidden-note: #000000;
 
+$header-font: 'Bungee Shade', cursive;
+$main-font: 'Roboto', sans-serif;
 
 
 
@@ -16,3 +18,4 @@ $use-bounce: true;
 $use-shake: true;
 $use-flip: true;
 $use-tada: true;
+
