--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,6 +4,7 @@ $yellow: #fcfc28;
 $pink: #f4427a;
 $purple: #cb51f7;
 $orange: #ff9d1e;
+$lightgreen: #42f445;
 
 
 $hidden-note: #000000;
@@ -11,11 +12,5 @@ $hidden-note: #000000;
 $header-font: 'Bungee Shade', cursive;
 $main-font: 'Roboto', sans-serif;
 
-
-
-$use-flipInY: true;
-$use-bounce: true;
-$use-shake: true;
-$use-flip: true;
 $use-tada: true;
 
