--- a/sass/app.scss
+++ b/sass/app.scss
@@ -27,6 +27,7 @@
 }
 .game {
     text-align: center;
+    margin: 40px auto;
 }
 
 .deck {
@@ -75,6 +76,7 @@
     transform-style: preserve-3d;
     -webkit-transform-style: preserve-3d;
     transition: transform 0.6s;
+   
 }
 
 figure {
@@ -85,7 +87,8 @@ figure {
     height: 100%;
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
-    @include border-radius(20px)
+    @include border-radius(20px);
+     box-shadow: -5px 5px #000;
 }
 
 .faceDown {
@@ -109,5 +112,55 @@ figure {
     pointer-events: none;
 }
 
+%btn {
+    width: 100px;
+    height: 40px;
+    @include border-radius(10px);
+    box-shadow: -5px 5px #000;
+    position: relative;
+    top: 0;
+    margin: 0px 10px;
+    font-family: $header-font;
+    font-size: 20px;
+    border: none;
+    transition: all 0.2s ease-in-out;
+}
 
 
+.easy-btn {
+    @extend %btn;
+    background-color: $yellow;
+}
+
+
+button:active,
+button:focus {
+    outline: 0;
+}
+
+.hard-btn {
+    @extend %btn;
+    background-color: $purple;
+}
+
+.active {
+  box-shadow: -1px 1px #000;;
+  top: 4px;
+  
+}
+
+.reset-btn {
+    @extend %btn;
+    background-color: $green;
+}
+
+.reset-btn:active {
+  box-shadow: -1px 1px #000;;
+  top: 4px;
+}
+
+#counter{
+  font-family: $header-font;
+  font-size: 28px;
+  margin-left: 20px;
+}
