--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -11,7 +11,7 @@ $grey: #ece8e8;
 $hidden-note: #000000;
 
 $header-font: 'Bungee Shade', cursive;
-$main-font: 'Roboto', sans-serif;
+$main-font: 'Gaegu', cursive;
 
 $use-tada: true;
 
