--- a/css/app.css
+++ b/css/app.css
@@ -3,7 +3,7 @@ Animate.css - http://daneden.me/animate
 Licensed under the MIT license - http://opensource.org/licenses/MIT
 Copyright (c) 2015 Daniel Eden
 */
-@import url("https://fonts.googleapis.com/css?family=Bungee+Shade|Roboto");
+@import url("https://fonts.googleapis.com/css?family=Bungee+Shade|Gaegu");
 body {
   -webkit-backface-visibility: hidden; }
 
@@ -59,14 +59,23 @@ body {
   height: 100%;
   flex-direction: column;
   text-align: center;
-  font-family: "Roboto", sans-serif; }
+  font-family: "Gaegu", cursive;
+  background-color: #08c6f3; }
 
 .title {
   font-family: "Bungee Shade", cursive;
   font-size: 48px; }
 
 .lead {
-  font-size: 24px; }
+  font-size: 32px; }
+
+.counter-text {
+  font-size: 32px; }
+
+#counter {
+  font-family: "Gaegu", cursive;
+  font-size: 40px;
+  margin-left: 20px; }
 
 .title-text {
   text-align: center; }
@@ -135,7 +144,7 @@ figure {
   box-shadow: -5px 5px #000; }
 
 .faceDown {
-  background-color: #ece8e8;
+  background-color: white;
   background-image: url("../assets/images/treble.png");
   background-repeat: no-repeat;
   background-position: center;
@@ -166,13 +175,13 @@ figure {
   height: 40px;
   -webkit-border-radius: 10px;
   border-radius: 10px;
-  box-shadow: -5px 5px #000;
+  box-shadow: -8px 5px #000;
   position: relative;
   top: 0;
   margin: 0px 10px;
   font-family: "Bungee Shade", cursive;
   font-size: 20px;
-  border: none;
+  border: 2px solid black;
   transition: all 0.2s ease-in-out; }
 
 .easy-btn {
@@ -195,10 +204,5 @@ button:focus {
 .reset-btn:active {
   box-shadow: -1px 1px #000;
   top: 4px; }
-
-#counter {
-  font-family: "Bungee Shade", cursive;
-  font-size: 28px;
-  margin-left: 20px; }
 
 /*# sourceMappingURL=app.css.map */
