--- a/sass/app.scss
+++ b/sass/app.scss
@@ -23,15 +23,31 @@
 
 .lead {
   font-size: 32px;
+  margin-bottom: 0;
 }
 .counter-text {
   font-size: 32px;
+  position: relative;
+  margin: -15px auto;
 }
 
 #counter {
   font-family: $main-font;
   font-size: 40px;
   margin-left: 20px;
+}
+
+.counter-wrapper{
+  width: 270px;
+  height: 40px;
+  background-color: white;
+  border: solid 2px black;
+  @include border-radius(10px);
+  box-shadow: -8px 5px #000;
+  position: relative;
+  margin: 40px auto;
+  text-align: center;
+  
 }
 
 
@@ -169,8 +185,8 @@ button:focus {
 
 .active {
   box-shadow: -1px 1px #000;
-  ;
   top: 4px;
+  opacity: 0.2;
 
 }
 
