--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -12,6 +12,8 @@ $hidden-note: #000000;
 
 $header-font: 'Bungee Shade', cursive;
 $main-font: 'Gaegu', cursive;
+$small-header: 24px;
+$text-block-size: 18px;
 
 $use-tada: true;
 
