--- a/css/app.css
+++ b/css/app.css
@@ -74,9 +74,9 @@ html body {
 @media (min-width: 768px) {
   .main {
     display: flex;
-    flex-direction: row;
     align-items: stretch;
-    justify-content: flex-start; } }
+    justify-content: flex-start;
+    flex-direction: row; } }
 
 .title-text {
   text-align: center; }
@@ -138,8 +138,8 @@ html body {
   margin-left: 20px; }
 
 .deck {
-  height: 300px;
-  width: 400px;
+  height: 400px;
+  width: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -150,7 +150,11 @@ html body {
   align-items: center;
   position: relative;
   perspective: 800px;
-  margin: 0 auto; }
+  margin: 0 20px; }
+  @media (min-width: 768px) {
+    .deck {
+      height: 450px;
+      width: auto; } }
 
 .color-1 {
   background-color: #4286f4; }
@@ -178,11 +182,16 @@ html body {
   background-color: white; }
 
 .card {
-  height: 30%;
-  width: 22%;
+  height: 20%;
+  width: 28%;
+  margin: 2%;
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
   transition: transform 0.6s; }
+  @media (min-width: 768px) {
+    .card {
+      height: 28%;
+      width: 20%; } }
 
 figure {
   margin: 0;
@@ -224,22 +233,25 @@ figure {
   pointer-events: none; }
 
 .easy-btn, .hard-btn, .reset-btn {
-  width: 100px;
-  height: 40px;
+  width: 80px;
+  height: 30px;
   -webkit-border-radius: 10px;
   border-radius: 10px;
   box-shadow: -8px 5px #000;
   position: relative;
   top: 0;
-  margin: 20px;
+  margin: 6px;
   font-family: "Bungee Shade", cursive;
-  font-size: 20px;
+  font-size: 16px;
   border: 2px solid black;
   transition: all 0.2s ease-in-out; }
   @media (min-width: 768px) {
     .easy-btn, .hard-btn, .reset-btn {
       display: block;
-      margin: 20px auto; } }
+      margin: 20px auto;
+      width: 100px;
+      height: 40px;
+      font-size: 20px; } }
 
 .easy-btn {
   background-color: #fcfc28; }
