--- a/sass/app.scss
+++ b/sass/app.scss
@@ -26,13 +26,12 @@ html body {
 }
 
 .main {
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     display: flex;
-    flex-direction: row;
     align-items: stretch;
     justify-content: flex-start;
+    flex-direction: row;
   }
-
 }
 
 .title-text {
@@ -41,7 +40,7 @@ html body {
 
 .buttonsAndCounter {
   flex: 0 0 8rem;
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     order: 1;
     min-width: 20%;
     max-width: 20%;
@@ -55,14 +54,14 @@ html body {
   margin: 40px auto;
   position: relative;
   flex: 1 1 auto;
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     order: 2;
     min-width: 60%;
   }
 }
 
 .instructions {
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     flex: 0 0 auto;
     order: 3;
     min-width: 20%;
@@ -77,11 +76,12 @@ html body {
   font-size: $small-header;
 }
 
-.list{
+.list {
   list-style-type: none;
   line-height: 1.5;
   font-size: $text-block-size;
 }
+
 .list-item {
   margin-bottom: 15px;
 }
@@ -104,16 +104,18 @@ html body {
   margin-left: 20px;
 }
 
-.counter-wrapper {
-  
-
-}
+.counter-wrapper {}
 
 
 .deck {
+  @media (min-width: $tablet-width) {
+    height: 450px;
+    width: auto;
+  }
 
-  height: 300px;
-  width: 400px;
+  height: 400px;
+  width: 80%;
+
   @include display(flex);
   flex-wrap: wrap;
   flex-direction: row;
@@ -121,7 +123,7 @@ html body {
   align-items: center;
   position: relative;
   perspective: 800px;
-  margin: 0 auto;
+  margin: 0 20px;
 }
 
 .color-1 {
@@ -157,8 +159,15 @@ html body {
 }
 
 .card {
-  height: 30%;
-  width: 22%;
+  @media (min-width: $tablet-width) {
+    height: 28%;
+    width: 20%;
+
+  }
+  height: 20%;
+  width: 28%;
+  margin: 2%;
+
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
   transition: transform 0.6s;
@@ -203,20 +212,23 @@ figure {
 }
 
 %btn {
-  width: 100px;
-  height: 40px;
+  width: 80px;
+  height: 30px;
   @include border-radius(10px);
   box-shadow: -8px 5px #000;
   position: relative;
   top: 0;
-  margin: 20px;
+  margin: 6px;
   font-family: $header-font;
-  font-size: 20px;
+  font-size: 16px;
   border: 2px solid black;
   transition: all 0.2s ease-in-out;
-  @media (min-width: 768px) {
+  @media (min-width: $tablet-width) {
     display: block;
     margin: 20px auto;
+    width: 100px;
+    height: 40px;
+    font-size: 20px;
   }
 }
 
@@ -254,7 +266,3 @@ button:focus {
   ;
   top: 4px;
 }
-
-
-
-
