--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,4 @@
+//colours
 $blue: #4286f4;
 $green: #42f445;
 $yellow: #fcfc28;
@@ -7,16 +8,16 @@ $orange: #ff9d1e;
 $lightgreen: #42f445;
 $grey: #ece8e8;
 
-
-$hidden-note: #000000;
-
+//fonts
 $header-font: 'Bungee Shade', cursive;
 $main-font: 'Gaegu', cursive;
 $small-header: 24px;
 $text-block-size: 18px;
 
+//animation
 $use-tada: true;
 
+//media queries
 $tablet-width: 768px;
 $desktop-width: 1024px;
 
