--- a/sass/app.scss
+++ b/sass/app.scss
@@ -32,10 +32,12 @@ html body {
     justify-content: flex-start;
     flex-direction: row;
   }
+  margin-bottom: 100px;
 }
 
 .title-text {
   text-align: center;
+  margin-top: 40px;
 }
 
 .buttonsAndCounter {
@@ -70,6 +72,7 @@ html body {
   }
   order: 1;
   text-align: center;
+  margin-right: 20px;
 }
 
 .instructions-title {
@@ -106,16 +109,13 @@ html body {
 
 .counter-wrapper {}
 
-
 .deck {
   @media (min-width: $tablet-width) {
     height: 450px;
     width: auto;
   }
-
   height: 400px;
   width: 80%;
-
   @include display(flex);
   flex-wrap: wrap;
   flex-direction: row;
@@ -162,16 +162,13 @@ html body {
   @media (min-width: $tablet-width) {
     height: 28%;
     width: 20%;
-
   }
   height: 20%;
   width: 28%;
   margin: 2%;
-
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
   transition: transform 0.6s;
-
 }
 
 figure {
@@ -192,7 +189,6 @@ figure {
   background-size: 600%;
   background-position: center;
   border: 2px solid black;
-
 }
 
 .spinBack {
@@ -232,12 +228,10 @@ figure {
   }
 }
 
-
 .easy-btn {
   @extend %btn;
   background-color: $yellow;
 }
-
 
 button:active,
 button:focus {
@@ -253,7 +247,6 @@ button:focus {
   box-shadow: -1px 1px #000;
   top: 4px;
   opacity: 0.2;
-
 }
 
 .reset-btn {
@@ -263,6 +256,5 @@ button:focus {
 
 .reset-btn:active {
   box-shadow: -1px 1px #000;
-  ;
   top: 4px;
 }
